                     for a given key contains all values mapped to this key. Thanks to Nils Kaiser, Alan Mehlo. 
 o [COLLECTIONS-226] Added method "ListOrderedMap#putAll(int, Map)". Thanks to Vasily Ivanov. 
 o [COLLECTIONS-213] Added support for resettable iterators in "IteratorIterable". Thanks to Dusan Chromy. 


Changed classes / methods
-------------------------

 o [COLLECTIONS-466] Replaced "Collection" with "Iterable" for method arguments where applicable.
 o [COLLECTIONS-460] Changed "IteratorChain" to use internally a "Queue" instead of a "List". Iterators are
                     removed from the queue once used and can be garbage collected after being exhausted.
                     Additionally removed the methods "setIterator(Iterator)" and "getIterators()".
 o [COLLECTIONS-459] Removed method "setArray(Object)" in class ArrayIterator and method "setArray(Object[])"
                     in class ObjectArrayIterator and made fields array, startIndex and endIndex final and package private.
 o [COLLECTIONS-455] Changed scope of various fields to private where appropriate.
 o [COLLECTIONS-454] An iterator over a "Flat3Map#entrySet()" will now return independent Map.Entry objects that will
                     not change anymore when the iterator progresses.
 o [COLLECTIONS-453] Several closure and transformer implementations in the functor package will now copy
                     an array as input parameter to their constructor (e.g. ChainedClosure).
 o [COLLECTIONS-452] Change base package to "org.apache.commons.collections4".
 o [COLLECTIONS-451] The constructors for all *Utils classes are now private to prevent instantiation. 
 o [COLLECTIONS-424] "CompositeSet" does not inherit from "CompositeCollection" anymore. The inner class "SetMutator"
                     has been updated accordingly. Thanks to Michael Pradel.
 o [COLLECTIONS-382] Change maven coordinates to "org.apache.commons.commons-collections4". Thanks to Olivier Lamy. 