@@ -79,7 +79,7 @@ public final class UnmodifiableQueue<E>
      */
     private void writeObject(final ObjectOutputStream out) throws IOException {
         out.defaultWriteObject();
-        out.writeObject(collection);
+        out.writeObject(decorated());
     }
 
     /**
@@ -92,7 +92,7 @@ public final class UnmodifiableQueue<E>
     @SuppressWarnings("unchecked")
     private void readObject(final ObjectInputStream in) throws IOException, ClassNotFoundException {
         in.defaultReadObject();
-        collection = (Collection<E>) in.readObject();
+        setCollection((Collection<E>) in.readObject());
     }
 
     //-----------------------------------------------------------------------
