@@ -55,7 +55,7 @@ public abstract class AbstractSerializableSetDecorator<E>
      */
     private void writeObject(final ObjectOutputStream out) throws IOException {
         out.defaultWriteObject();
-        out.writeObject(collection);
+        out.writeObject(decorated());
     }
 
     /**
@@ -68,7 +68,7 @@ public abstract class AbstractSerializableSetDecorator<E>
     @SuppressWarnings("unchecked")
     private void readObject(final ObjectInputStream in) throws IOException, ClassNotFoundException {
         in.defaultReadObject();
-        collection = (Collection<E>) in.readObject();
+        setCollection((Collection<E>) in.readObject());
     }
 
 }
